--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,11 @@ I write weeknotes to reflect upon my day-to-day actions. I write blog posts to s
 
 <br><br>
 
-Currently, I'm adjusting to my post-college life. I'm trying to understand <i>how</i> I can devote my time to what I want to do. For most of the days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on face.
+Currently, I'm adjusting to my post-college life. I'm trying to understand <i>how</i> I can devote my time to what I want to do. For most of the days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on my face.
+
+<br><br>
+
+My senior thesis was on the "Space" of Computing: Our conception of "computing" has changed and <i>continues</i> to change. This work identified dimensions that constitute the "space of computing". While some dimensions are less recognizable than others, defining them is an essential undertaking because defining the scope of "computing space" is to understand past, present, and future of our technological advancements, what we've already done and what we've neglected. You can view the thesis presentation <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a>.
 
 <br><br>
 
@@ -67,7 +71,7 @@ Thank you for spending some time here. Stay a while if you aren't in a rush.
 
 <div class="catalogue">
 
-  {% for post in site.categories.weeknotes | limit:3 %}
+  {% for post in site.categories.weeknotes limit:3 %}
   <a href="{{ post.url | prepend: site.baseurl }}" class="catalogue-item">
     <div>
 
