--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -9,40 +9,49 @@ permalink: /collection/
 
   Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list does not have any implications.
 
-<br> <br>
+<br> <br> <br>
 
-  <mark> &nbsp Podcasts: &nbsp  </mark> <br><br>
+  <div class="collection-title"> Podcasts:  </div>
 
-    <div class="collection">
-      <a href="https://www.conversationswithtyler.com">Conversations with Tyler</a> <br>
-      <a href="https://fs.blog/the-knowledge-project/">The Knowledge Project</a> <br>
-      <a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> <br>
+    <div class="collection-bodypart">
+      <a href="https://www.conversationswithtyler.com">Conversations with Tyler</a> by Tyler Cowen <br>
+      <a href="https://fs.blog/the-knowledge-project/">The Knowledge Project</a> by Shane Parrish<br>
+      <a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> by 羅輯思維 <br>
+      <a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen<br>
+      <a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La <br>
       <br> <br>
     </div>
 
-  <mark> &nbsp Groups: &nbsp  </mark> <br><br>
-    <div class="collection">
+  <div class="collection-title">Groups:</div>
+    <div class="collection-bodypart">
       <a href="http://www.dubberly.com">Dubberly Design Office</a><br>
       <a href="https://dynamicland.org">Dynamicland</a><br>
       <a href="https://newcomputers.group">New Computer Working Group</a><br>
       Soft Surplus<br>
       <a href="http://skrekkogle.com">Skrekkogle</a> <br>
       <a href="http://screenl.es">The Screenless Office</a><br>
+      <a href="http://frolicstudio.com">Frolic Studio</a><br>
+      <a href="http://berglondon.com">BERG</a><br>
+      <a href="http://nordprojects.co">Nord Projects</a><br>
+      <a href="https://www.khanacademy.org">Khan Academy</a><br>
 
       <br> <br>
     </div>
 
-  <mark> &nbsp Books: &nbsp  </mark> <br><br>
-    <div class="collection">
+  <div class="collection-title">Books:</div>
+    <div class="collection-bodypart">
       <a href="https://press.stripe.com/#the-dream-machine">The Dream Machine</a> by M. Mitchell Waldrop <br>
       <a href="http://mitpress.mit.edu/books/architectural-intelligence">Architectural Intelligence</a>  by Molly Wright Steenson<br>
+      <a href="https://en.wikipedia.org/wiki/Reinventing_Fire">Reinventing Fire</a> by Amory B. Lovins <br>
+
 
       <br> <br>
     </div>
 
-  <mark> &nbsp Articles: &nbsp  </mark> <br> <br>
-    <div class="collection">
+  <div class="collection-title">Articles:</div>
+    <div class="collection-bodypart">
       <a href="https://www.theatlantic.com/technology/archive/2017/09/saving-the-world-from-code/540393/">The Coming Software Apocalypse</a>  by James Somers<br>
+      <a href="http://worrydream.com/ClimateChange/">What Can a Technologist Do About Climate Change</a>  by Bret Victor<br>
 
     </div>
 
