--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -7,52 +7,60 @@ permalink: /collection/
 <div class="post">
   <div class="post-line"></div>
 
-  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list does not have any implications.
+  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary.
 
 <br> <br> <br>
 
   <div class="collection-title"> Podcasts:  </div>
 
     <div class="collection-bodypart">
-      <a href="https://www.conversationswithtyler.com">Conversations with Tyler</a> by Tyler Cowen <br>
-      <a href="https://fs.blog/the-knowledge-project/">The Knowledge Project</a> by Shane Parrish<br>
-      <a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> by 羅輯思維 <br>
-      <a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen<br>
-      <a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La <br>
+      <ul class="collection-list">
+        <li class="randomize_podcasts"><a href="https://www.conversationswithtyler.com">Conversations with Tyler</a> by Tyler Cowen  </li>
+        <li class="randomize_podcasts"><a href="https://fs.blog/the-knowledge-project/">The Knowledge Project</a> by Shane Parrish </li>
+        <li class="randomize_podcasts"><a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> by 羅輯思維  </li>
+        <li class="randomize_podcasts"><a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen </li>
+        <li class="randomize_podcasts"><a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La  </li>
+      </ul>
       <br> <br>
     </div>
 
   <div class="collection-title">Groups:</div>
     <div class="collection-bodypart">
-      <a href="http://www.dubberly.com">Dubberly Design Office</a><br>
-      <a href="https://dynamicland.org">Dynamicland</a><br>
-      <a href="https://newcomputers.group">New Computer Working Group</a><br>
-      Soft Surplus<br>
-      <a href="http://skrekkogle.com">Skrekkogle</a> <br>
-      <a href="http://screenl.es">The Screenless Office</a><br>
-      <a href="http://frolicstudio.com">Frolic Studio</a><br>
-      <a href="http://berglondon.com">BERG</a><br>
-      <a href="http://nordprojects.co">Nord Projects</a><br>
-      <a href="https://www.khanacademy.org">Khan Academy</a><br>
-
+      <ul class="collection-list">
+        <li class="randomize_groups"><a href="http://www.dubberly.com">Dubberly Design Office</a> </li>
+        <li class="randomize_groups"><a href="https://dynamicland.org">Dynamicland</a> </li>
+        <li class="randomize_groups"><a href="https://newcomputers.group">New Computer Working Group</a> </li>
+        <li class="randomize_groups">Soft Surplus </li>
+        <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkogle</a>  </li>
+        <li class="randomize_groups"><a href="http://screenl.es">The Screenless Office</a> </li>
+        <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
+        <li class="randomize_groups"><a href="http://berglondon.com">BERG</a> </li>
+        <li class="randomize_groups"><a href="http://nordprojects.co">Nord Projects</a> </li>
+        <li class="randomize_groups"><a href="https://www.khanacademy.org">Khan Academy</a> </li>
+        <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
+      </ul>
       <br> <br>
     </div>
 
   <div class="collection-title">Books:</div>
     <div class="collection-bodypart">
-      <a href="https://press.stripe.com/#the-dream-machine">The Dream Machine</a> by M. Mitchell Waldrop <br>
-      <a href="http://mitpress.mit.edu/books/architectural-intelligence">Architectural Intelligence</a>  by Molly Wright Steenson<br>
-      <a href="https://en.wikipedia.org/wiki/Reinventing_Fire">Reinventing Fire</a> by Amory B. Lovins <br>
+      <ul class="collection-list">
+        <li class="randomize_books"><a href="https://press.stripe.com/#the-dream-machine">The Dream Machine</a> by M. Mitchell Waldrop </li>
+        <li class="randomize_books"><a href="http://mitpress.mit.edu/books/architectural-intelligence">Architectural Intelligence</a>  by Molly Wright Steenson</li>
+        <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/Reinventing_Fire">Reinventing Fire</a> by Amory B. Lovins </li>
 
-
+      </ul>
       <br> <br>
     </div>
 
   <div class="collection-title">Articles:</div>
     <div class="collection-bodypart">
-      <a href="https://www.theatlantic.com/technology/archive/2017/09/saving-the-world-from-code/540393/">The Coming Software Apocalypse</a>  by James Somers<br>
-      <a href="http://worrydream.com/ClimateChange/">What Can a Technologist Do About Climate Change</a>  by Bret Victor<br>
-
+      <ul class="collection-list">
+        <li class="randomize_articles"><a href="https://www.theatlantic.com/technology/archive/2017/09/saving-the-world-from-code/540393/">The Coming Software Apocalypse</a>  by James Somers </li>
+        <li class="randomize_articles"><a href="http://worrydream.com/ClimateChange/">What Can a Technologist Do About Climate Change</a>  by Bret Victor </li>
+        <li class="randomize_articles"><a href="https://nadiaeghbal.com/independent-research">The Independent Research</a> by Nadia Eghbal </li>
+        <li class="randomize_articles"><a href="https://nadiaeghbal.com/technical-conversations">Technical Conversations</a> by Nadia Eghbal </li>
+      </ul>
     </div>
 
 </div>
