--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -76,7 +76,8 @@ mark {
 }
 
 .collection {
-  &-bodypart {padding: 0 0 0 1rem;
+  &-bodypart {
+    padding: 0 0 0 1rem;
   }
 
   &-title {
@@ -84,6 +85,11 @@ mark {
     font-family: $sans-serif;
     font-weight: 700;
     padding: 0 0 0.2rem;
+  }
+
+  &-list {
+    padding: 0 0 0 0;
+    list-style-type:none;
   }
 }
 
