weeknotes n collection  updates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ Currently, I'm adjusting to my post-college life. I'm trying to understand <i>ho
 
 <br><br>
 
-My senior thesis was on the "Space" of Computing: Our conception of "computing" has changed and <i>continues</i> to change. This work identified dimensions that constitute the "space of computing". While some dimensions are less recognizable than others, defining them is an essential undertaking because defining the scope of "computing space" is to understand past, present, and future of our technological advancements, what we've already done and what we've neglected. You can view the thesis presentation <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a>.
+My senior thesis was on the "Space" of Computing: Computer went from being a job title for people who do calculations, to large machines that would fill up an entire room, to devices so small that they would fit into different objects and dissolve into our environment. Clearly, our conception of "computing" has changed and <i>continues</i> to change. This work identified dimensions that constitute the "space of computing". While some dimensions are less recognizable than others, defining them is an essential undertaking because defining the scope of "computing space" is to understand past, present, and future of our technological advancements, what we've already done and what we've neglected. You can view the thesis presentation <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a>.
 
 <br><br>
 
