--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,16 @@
 
   <!-- RSS -->
   {% feed_meta %}
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-91457620-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-91457620-1');
+</script>
+
+
 </head>
