--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -7,7 +7,7 @@ permalink: /collection/
 <div class="post">
   <div class="post-line"></div>
 
-  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary.
+  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary. Also, this collection probably describe more about my interest than who they are.
 
 <br> <br> <br>
 
@@ -20,6 +20,7 @@ permalink: /collection/
         <li class="randomize_podcasts"><a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> by 羅輯思維  </li>
         <li class="randomize_podcasts"><a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen </li>
         <li class="randomize_podcasts"><a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La  </li>
+        <li class="randomize_podcasts"><a href="https://www.producthunt.com/radio">Product Hunt Radio</a> by Ryan Hoover  </li>
       </ul>
       <br> <br>
     </div>
