collection n weeknotes udpated

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -39,6 +39,7 @@ permalink: /collection/
         <li class="randomize_groups"><a href="http://nordprojects.co">Nord Projects</a> </li>
         <li class="randomize_groups"><a href="https://www.khanacademy.org">Khan Academy</a> </li>
         <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
+        <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
       </ul>
       <br> <br>
     </div>
@@ -61,6 +62,8 @@ permalink: /collection/
         <li class="randomize_articles"><a href="http://worrydream.com/ClimateChange/">What Can a Technologist Do About Climate Change</a>  by Bret Victor </li>
         <li class="randomize_articles"><a href="https://nadiaeghbal.com/independent-research">The Independent Research</a> by Nadia Eghbal </li>
         <li class="randomize_articles"><a href="https://nadiaeghbal.com/technical-conversations">Technical Conversations</a> by Nadia Eghbal </li>
+        <li class="randomize_articles"><a href="https://www.offscreenmag.com/blog/indie-magonomics">Indie Magonomics – making a sustainable indie print magazine</a> by Kai Brach </li>
+        <li class="randomize_articles"><a href="https://medium.com/@maximolly/ai-culture-buildings-cities-and-infrastructures-and-beyond-8b91ce0e916f?_branch_match_id=482767526241079399">AI & Culture: Buildings, Cities (and Infrastructures, and Beyond…)</a> by Molly Wright Steenson </li>
       </ul>
     </div>
 
