--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -7,7 +7,7 @@ permalink: /collection/
 <div class="post">
   <div class="post-line"></div>
 
-  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary. Also, this collection probably describe more about my interest than who they are.
+  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary. Also, this collection probably describes more about my own interest than anything else.
 
 <br> <br> <br>
 
