updated coming soon article

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,6 +33,13 @@ Thank you for spending some time here. Stay a while if you aren't in a rush.
 <br> <br>
 <div class="article">
 
+  <a href="{{ post.url | prepend: site.baseurl }}" class="article-title">
+  <h1 class="article-title">(Coming soon) Defining the Dimensions of the ‘Space’ of Computing</h1>
+  <!-- <div class="article-line"></div> -->
+  <time class="article-time"> March 28, 2019 • 10min</time>
+  <br><br>
+  </a>
+
   {% for post in site.categories.blog  %}
   {% if post.external-url %}
 
