--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,10 @@
         <ul>
           <li><a href="{{ '/weeknotes' | prepend: site.baseurl }}">Weeknotes</a></li>
           <li><a href="{{ '/collection' |prepend: site.baseurl }}/">Collection</a></li>
+          <!-- <li><a href="{{ '/china' | prepend: site.baseurl }}">China</a></li> -->
+          <li><a href="http://tinyletter.com/speculatvglitch">Newsletter</a></li>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+
         </ul>
       </div>
     </nav>
