--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -19,8 +19,10 @@ permalink: /collection/
         <li class="randomize_podcasts"><a href="https://fs.blog/the-knowledge-project/">The Knowledge Project</a> by Shane Parrish </li>
         <li class="randomize_podcasts"><a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> by 羅輯思維  </li>
         <li class="randomize_podcasts"><a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen </li>
-        <li class="randomize_podcasts"><a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La  </li>
-        <li class="randomize_podcasts"><a href="https://www.producthunt.com/radio">Product Hunt Radio</a> by Ryan Hoover  </li>
+        <li class="randomize_podcasts"><a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La </li>
+        <li class="randomize_podcasts"><a href="https://www.producthunt.com/radio">Product Hunt Radio</a> by Ryan Hoover </li>
+        <li class="randomize_podcasts"><a href="https://www.cnn.com/specials/tech/the-human-code">The Human Code</a> by Laurie Segall </li>
+        <li class="randomize_podcasts"><a href="https://www.villageglobal.vc/podcast/">Venture Stories</a> by Village Global </li>
       </ul>
       <br> <br>
     </div>
@@ -31,7 +33,7 @@ permalink: /collection/
         <li class="randomize_groups"><a href="http://www.dubberly.com">Dubberly Design Office</a> </li>
         <li class="randomize_groups"><a href="https://dynamicland.org">Dynamicland</a> </li>
         <li class="randomize_groups"><a href="https://newcomputers.group">New Computer Working Group</a> </li>
-        <li class="randomize_groups">Soft Surplus </li>
+        <li class="randomize_groups"><a href="https://softsurpl.us">Soft Surplus</a> </li>
         <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkogle</a>  </li>
         <li class="randomize_groups"><a href="http://screenl.es">The Screenless Office</a> </li>
         <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
