added new weeknotes and fixed grammer for courage blog

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -17,7 +17,7 @@ permalink: /collection/
       <ul class="collection-list">
         <li class="randomize_podcasts"><a href="https://www.conversationswithtyler.com">Conversations with Tyler</a> by Tyler Cowen  </li>
         <li class="randomize_podcasts"><a href="https://fs.blog/the-knowledge-project/">The Knowledge Project</a> by Shane Parrish </li>
-        <li class="randomize_podcasts"><a href="https://baike.baidu.com/item/时间的朋友/20353715">時間的朋友</a> by 羅輯思維  </li>
+        <li class="randomize_podcasts"><a href="https://www.recode.net/recode-decode-podcast-kara-swisher">Recode Decode</a> by Kara Swisher  </li>
         <li class="randomize_podcasts"><a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen </li>
         <li class="randomize_podcasts"><a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La </li>
         <li class="randomize_podcasts"><a href="https://www.producthunt.com/radio">Product Hunt Radio</a> by Ryan Hoover </li>
