--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -39,9 +39,9 @@ permalink: /collection/
         <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
         <li class="randomize_groups"><a href="http://berglondon.com">BERG</a> </li>
         <li class="randomize_groups"><a href="http://nordprojects.co">Nord Projects</a> </li>
-        <li class="randomize_groups"><a href="https://www.khanacademy.org">Khan Academy</a> </li>
         <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
         <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
+        <li class="randomize_groups"><a href="https://www.plethora-project.com">Plethora Project</a> </li>
       </ul>
       <br> <br>
     </div>
@@ -52,6 +52,8 @@ permalink: /collection/
         <li class="randomize_books"><a href="https://press.stripe.com/#the-dream-machine">The Dream Machine</a> by M. Mitchell Waldrop </li>
         <li class="randomize_books"><a href="http://mitpress.mit.edu/books/architectural-intelligence">Architectural Intelligence</a>  by Molly Wright Steenson</li>
         <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/Reinventing_Fire">Reinventing Fire</a> by Amory B. Lovins </li>
+        <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/How_Buildings_Learn">How Buildings Learn</a> by Stewart Brand </li>
+        <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/The_Timeless_Way_of_Building">The Timeles Way of Building</a> by Christopher Alexander </li>
 
       </ul>
       <br> <br>
