--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,13 +36,13 @@ Thank you for spending some time here. Stay a while if you aren't in a rush.
 
   <!-- <img id="new_post" src="https://media.giphy.com/media/cQ23qw9OduzBc4ju7U/giphy.gif"> -->
 
-  <div class="article-new"> coming soon </div>
+  <!-- <div class="article-new"> coming soon </div>
   <a href="{{ post.url | prepend: site.baseurl }}" class="article-title">
-  <h1 class="article-title">Defining the Dimensions of the ‘Space’ of Computing</h1>
+  <h1 class="article-title">Defining the Dimensions of the ‘Space’ of Computing</h1> -->
   <!-- <div class="article-line"></div> -->
-  <time class="article-time"> April 15, 2019 • 10min</time>
+  <!-- <time class="article-time"> April 15, 2019 • 10min</time>
   <br><br>
-  </a>
+  </a> -->
 
   {% for post in site.categories.blog  %}
   {% if post.external-url %}
