new weeknote and images

--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -10,7 +10,7 @@ permalink: /weeknotes/
   I often re-remember the times when I wrote something everyday or every month. In order to reflect upon my work and life and inspired by Matt Webb's <a href="https://medium.com/job-garden/a-pre-history-of-weeknotes-plus-why-i-write-them-and-perhaps-why-you-should-too-week-16-31a4a5cbf7b0">article on Weeknotes</a>, I've decided scribble down thoughts and group them by weeks.
 
   <br><br>
-  In the hopes of making these weeknotes useful when looking back, I'm tagging work done under an organization/collective with the symbol &. In the future, I will sort these weeknotes by projects, to trace and see how everything unfolded.
+  <s>In the hopes of making these weeknotes useful when looking back, I'm tagging work done under an organization/collective with the symbol &. In the future, I will sort these weeknotes by projects, to trace and see how everything unfolded.</s> <- This did not work, I think I will need to find a different way to trace how my thinking evolve.
 
   <br><br>
 
