--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -68,6 +68,7 @@ permalink: /collection/
         <li class="randomize_articles"><a href="https://nadiaeghbal.com/technical-conversations">Technical Conversations</a> by Nadia Eghbal </li>
         <li class="randomize_articles"><a href="https://www.offscreenmag.com/blog/indie-magonomics">Indie Magonomics – making a sustainable indie print magazine</a> by Kai Brach </li>
         <li class="randomize_articles"><a href="https://medium.com/@maximolly/ai-culture-buildings-cities-and-infrastructures-and-beyond-8b91ce0e916f?_branch_match_id=482767526241079399">AI & Culture: Buildings, Cities (and Infrastructures, and Beyond…)</a> by Molly Wright Steenson </li>
+        <li class="randomize_articles"><a href="https://medium.com/s/story/reflecting-on-my-failure-to-build-a-billion-dollar-company-b0c31d7db0e7">Reflecting on My Failure to Build a Billion-Dollar Company</a> by Sahil Lavingia</li>
       </ul>
     </div>
 
