--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -42,6 +42,7 @@ permalink: /collection/
         <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
         <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
         <li class="randomize_groups"><a href="https://www.plethora-project.com">Plethora Project</a> </li>
+        <li class="randomize_groups"><a href="https://otherlab.com">Otherlab</a> </li>
       </ul>
       <br> <br>
     </div>
