--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -20,9 +20,11 @@ permalink: /collection/
         <li class="randomize_podcasts"><a href="https://www.recode.net/recode-decode-podcast-kara-swisher">Recode Decode</a> by Kara Swisher  </li>
         <li class="randomize_podcasts"><a href="https://www.indiehackers.com/podcast">Indie Hackers</a> by Courtland Allen </li>
         <li class="randomize_podcasts"><a href="https://www.gsd.harvard.edu/talking-practice/">Talking Practice</a> by Grace La </li>
-        <li class="randomize_podcasts"><a href="https://www.producthunt.com/radio">Product Hunt Radio</a> by Ryan Hoover </li>
+        <li class="randomize_podcasts"><a href="https://www.producthunt.com/radio">Product Hunt Radio</a> by Ryan Hoover & Abadesi Osunsade</li>
         <li class="randomize_podcasts"><a href="https://www.cnn.com/specials/tech/the-human-code">The Human Code</a> by Laurie Segall </li>
-        <li class="randomize_podcasts"><a href="https://www.villageglobal.vc/podcast/">Venture Stories</a> by Village Global </li>
+        <li class="randomize_podcasts"><a href="https://irlpodcast.org">IRL</a> by Manoush Zomorodi </li>
+        <li class="randomize_podcasts"><a href="https://www.alieward.com/ologies">Ologies</a> by Alie Ward </li>
+
       </ul>
       <br> <br>
     </div>
