--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -36,7 +36,7 @@ permalink: /collection/
         <li class="randomize_groups"><a href="https://dynamicland.org">Dynamicland</a> </li>
         <li class="randomize_groups"><a href="https://newcomputers.group">New Computer Working Group</a> </li>
         <li class="randomize_groups"><a href="https://softsurpl.us">Soft Surplus</a> </li>
-        <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkogle</a>  </li>
+        <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkøgle</a>  </li>
         <li class="randomize_groups"><a href="http://screenl.es">The Screenless Office</a> </li>
         <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
         <li class="randomize_groups"><a href="http://berglondon.com">BERG</a> </li>
