--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,15 +5,20 @@ layout: default
 
 <div class="post-line"></div>
 
-I think a lot about relationships, interactions, and stories. I'm gradually thinking more about tactility, spaces, conversations, and urban systems.
+Like anyone, I make mistakes and am not perfect. In general, I strive to be fearless, but not delusional; be joyful, but not naive; be thoughtful, but not stubborn; be communicative, but not commanding; be credible, but not infamous;
 
 <br><br>
+
+In the long-term, I want to help close the gap between ideals and reality, academic and industry.
+
+<br><br>
+Currently, I’m building small products at <a href="http://tinyfactories.space">Tiny Factories</a>. I believe I will be more useful if I can practice making, launching, improving, marketing, selling products in a monthly-cycle, because all of those are muscles that I need to exercise, ideally as early and as often.
+
+<!-- I think a lot about relationships, interactions, and stories. I'm gradually thinking more about tactility, spaces, conversations, and urban systems.
 
 I write weeknotes to reflect upon my day-to-day actions. I write blog posts to summarize a feeling I have. If you'd like to converse about something, or view my design portfolio, you can email me at <a href="mailto:wei@weiweihsu.com?Subject=Hello" target="_top">wei@weiweihsu.com</a>
 
-<br><br>
-
-Currently, I'm adjusting to my post-college life. I'm trying to understand <i>how</i> I can devote my time to what I want to do. For most of the days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on my face.
+Currently, I'm adjusting to my post-college life. I'm trying to understand <i>how</i> I can devote my time to what I want to do. For most of the days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on my face. -->
 
 <br><br>
 
