--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,14 +5,14 @@ layout: default
 
 <div class="post-line"></div>
 
-Like anyone, I make mistakes and am not perfect. In general, I strive to be fearless, but not delusional; be joyful, but not naive; be thoughtful, but not stubborn; be communicative, but not commanding; be credible, but not infamous;
+In general, I strive to be fearless, but not delusional; be joyful, but not naive; be thoughtful, but not stubborn; be communicative, but not commanding; be credible, but not infamous;
 
 <br><br>
 
 In the long-term, I want to help close the gap between ideals and reality, academic and industry.
 
 <br><br>
-Currently, I’m building small products at <a href="http://tinyfactories.space">Tiny Factories</a>. I believe I will be more useful if I can practice making, launching, improving, marketing, selling products in a monthly-cycle, because all of those are muscles that I need to exercise, ideally as early and as often.
+Currently, I’m building small products at <a href="http://tinyfactories.space">Tiny Factories</a>. I believe I will be more useful if I can practice making, launching, marketing, selling products in a monthly-cycle, because all of those are muscles that I need to exercise, ideally as early and as often. I also hope that more people become aware of this indiepreneur career path.
 
 <!-- I think a lot about relationships, interactions, and stories. I'm gradually thinking more about tactility, spaces, conversations, and urban systems.
 
