--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ In general, I strive to be fearless, but not delusional; be joyful, but not naiv
 In the long-term, I want to help close the gap between ideals and reality, academic and industry.
 
 <br><br>
-Currently, I’m building small products at <a href="http://tinyfactories.space">Tiny Factories</a>. I believe I will be more useful if I can practice making, launching, marketing, selling products in a monthly-cycle, because all of those are muscles that I need to exercise, ideally as early and as often. I also hope that more people become aware of this indiepreneur career path.
+Currently, I’m building small products at <a href="http://tinyfactories.space">Tiny Factories</a> because I believe there's a future where indiepreneurs thrive. In a few years, I hope to take the learnings from making, launching, marketing, selling products in a monthly-cycle and apply them to bigger projects.
 
 <!-- I think a lot about relationships, interactions, and stories. I'm gradually thinking more about tactility, spaces, conversations, and urban systems.
 
