--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -34,6 +34,7 @@ permalink: /collection/
       <ul class="collection-list">
         <li class="randomize_groups"><a href="http://www.dubberly.com">Dubberly Design Office</a> </li>
         <li class="randomize_groups"><a href="https://dynamicland.org">Dynamicland</a> </li>
+        <li class="randomize_groups"><a href="https://100r.co">Hundred Rabbits</a> </li>
         <li class="randomize_groups"><a href="https://newcomputers.group">New Computer Working Group</a> </li>
         <li class="randomize_groups"><a href="https://softsurpl.us">Soft Surplus</a> </li>
         <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkøgle</a>  </li>
@@ -65,6 +66,8 @@ permalink: /collection/
   <div class="collection-title">Articles:</div>
     <div class="collection-bodypart">
       <ul class="collection-list">
+        <li class="randomize_articles"><a href="https://indieweb.org/Posts_about_the_IndieWeb">Posts about the IndieWeb</a>  by a lot of people! </li>
+        <li class="randomize_articles"><a href="https://placesjournal.org/explore-places/infrastructure/">Articles on Infrastructure</a>  by Places Journal </li>
         <li class="randomize_articles"><a href="https://www.theatlantic.com/technology/archive/2017/09/saving-the-world-from-code/540393/">The Coming Software Apocalypse</a>  by James Somers </li>
         <li class="randomize_articles"><a href="http://worrydream.com/ClimateChange/">What Can a Technologist Do About Climate Change</a>  by Bret Victor </li>
         <li class="randomize_articles"><a href="https://nadiaeghbal.com/independent-research">The Independent Research</a> by Nadia Eghbal </li>
