new weeknote, finally

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -29,23 +29,14 @@ permalink: /collection/
       <br> <br>
     </div>
 
-  <div class="collection-title">Groups:</div>
+  <div class="collection-title">My tweets:</div>
     <div class="collection-bodypart">
       <ul class="collection-list">
-        <li class="randomize_groups"><a href="http://www.dubberly.com">Dubberly Design Office</a> </li>
-        <li class="randomize_groups"><a href="https://dynamicland.org">Dynamicland</a> </li>
-        <li class="randomize_groups"><a href="https://100r.co">Hundred Rabbits</a> </li>
-        <li class="randomize_groups"><a href="https://newcomputers.group">New Computer Working Group</a> </li>
-        <li class="randomize_groups"><a href="https://softsurpl.us">Soft Surplus</a> </li>
-        <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkøgle</a>  </li>
-        <li class="randomize_groups"><a href="http://screenl.es">The Screenless Office</a> </li>
-        <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
-        <li class="randomize_groups"><a href="http://berglondon.com">BERG</a> </li>
-        <li class="randomize_groups"><a href="http://nordprojects.co">Nord Projects</a> </li>
-        <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
-        <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
-        <li class="randomize_groups"><a href="https://www.plethora-project.com">Plethora Project</a> </li>
-        <li class="randomize_groups"><a href="https://otherlab.com">Otherlab</a> </li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1179840991466930176">Content designed for vertical viewing</a> </li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1179163493943001090"></a>Motion design for Patriot Act with Hasan Minhaj</li>
+        <li class="randomize_groups"><a href="Xian yu"></a></li>
+        <li class="randomize_groups"><a href="">shanghai</a></li>
+        <li class="randomize_groups"><a href=""></a></li>
       </ul>
       <br> <br>
     </div>
@@ -79,3 +70,26 @@ permalink: /collection/
     </div>
 
 </div>
+
+<!--
+groups collection
+<div class="collection-title">Groups:</div>
+  <div class="collection-bodypart">
+    <ul class="collection-list">
+      <li class="randomize_groups"><a href="http://www.dubberly.com">Dubberly Design Office</a> </li>
+      <li class="randomize_groups"><a href="https://dynamicland.org">Dynamicland</a> </li>
+      <li class="randomize_groups"><a href="https://100r.co">Hundred Rabbits</a> </li>
+      <li class="randomize_groups"><a href="https://newcomputers.group">New Computer Working Group</a> </li>
+      <li class="randomize_groups"><a href="https://softsurpl.us">Soft Surplus</a> </li>
+      <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkøgle</a>  </li>
+      <li class="randomize_groups"><a href="http://screenl.es">The Screenless Office</a> </li>
+      <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
+      <li class="randomize_groups"><a href="http://berglondon.com">BERG</a> </li>
+      <li class="randomize_groups"><a href="http://nordprojects.co">Nord Projects</a> </li>
+      <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
+      <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
+      <li class="randomize_groups"><a href="https://www.plethora-project.com">Plethora Project</a> </li>
+      <li class="randomize_groups"><a href="https://otherlab.com">Otherlab</a> </li>
+    </ul>
+    <br> <br>
+  </div> -->
