--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -33,15 +33,18 @@ permalink: /collection/
     <div class="collection-bodypart">
       <ul class="collection-list">
         <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1179840991466930176">Content designed for vertical viewing</a> </li>
-        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1179163493943001090"></a>Motion design for Patriot Act with Hasan Minhaj</li>
-        <li class="randomize_groups"><a href="Xian yu"></a></li>
-        <li class="randomize_groups"><a href="">shanghai</a></li>
-        <li class="randomize_groups"><a href=""></a></li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1179163493943001090">Motion design for Patriot Act with Hasan Minhaj</li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1103464497157529600">Alibaba's re-commerce app</a></li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1144667443920379910">Techniques from Into the Spider-verse</a></li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1098763943495970816">A comparison of revenue distribution between Tencent & Facebook</a></li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1088534031220625409">Interface + Retail observations in Shanghai</a></li>
+        <li class="randomize_groups"><a href="https://twitter.com/glitchyowl/status/1082880387154468864">Mobility related obersations in Shanghai</a></li>
       </ul>
       <br> <br>
     </div>
 
   <div class="collection-title">Books:</div>
+
     <div class="collection-bodypart">
       <ul class="collection-list">
         <li class="randomize_books"><a href="https://press.stripe.com/#the-dream-machine">The Dream Machine</a> by M. Mitchell Waldrop </li>
