--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -74,7 +74,7 @@ permalink: /collection/
 
 </div>
 
-<!--
+
 groups collection
 <div class="collection-title">Groups:</div>
   <div class="collection-bodypart">
@@ -95,4 +95,4 @@ groups collection
       <li class="randomize_groups"><a href="https://otherlab.com">Otherlab</a> </li>
     </ul>
     <br> <br>
-  </div> -->
+  </div>
