--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -87,7 +87,7 @@ groups collection
       <li class="randomize_groups"><a href="http://skrekkogle.com">Skrekkøgle</a>  </li>
       <li class="randomize_groups"><a href="http://screenl.es">The Screenless Office</a> </li>
       <li class="randomize_groups"><a href="http://frolicstudio.com">Frolic Studio</a> </li>
-      <li class="randomize_groups"><a href="http://berglondon.com">BERG</a> </li>
+      <li class="randomize_groups"><a href="https://vimeo.com/bergstudio">BERG</a> </li>
       <li class="randomize_groups"><a href="http://nordprojects.co">Nord Projects</a> </li>
       <li class="randomize_groups"><a href="http://www.indie.vc"> Indie VC</a> </li>
       <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
