--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     {% include randomize_articles.html %}
     {% include randomize_books.html %}
+    {% include randomize_tweets.html %}
     {% include randomize_groups.html %}
     {% include randomize_podcasts.html %}
   </body>
