fixed collection and new weeknote

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -11,7 +11,7 @@ permalink: /collection/
 
 <br> <br> <br>
 
-  <div class="collection-title"> Podcasts:  </div>
+  <div class="collection-title"> Podcasts  </div>
 
     <div class="collection-bodypart">
       <ul class="collection-list">
@@ -29,7 +29,7 @@ permalink: /collection/
       <br> <br>
     </div>
 
-  <div class="collection-title">My tweets:</div>
+  <div class="collection-title">My tweets</div>
     <div class="collection-bodypart">
       <ul class="collection-list">
         <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179840991466930176">Content designed for vertical viewing</a> </li>
@@ -46,7 +46,7 @@ permalink: /collection/
       <br> <br>
     </div>
 
-  <div class="collection-title">Books:</div>
+  <div class="collection-title">Books</div>
 
     <div class="collection-bodypart">
       <ul class="collection-list">
@@ -60,7 +60,7 @@ permalink: /collection/
       <br> <br>
     </div>
 
-  <div class="collection-title">Articles:</div>
+  <div class="collection-title">Articles</div>
     <div class="collection-bodypart">
       <ul class="collection-list">
         <li class="randomize_articles"><a href="https://indieweb.org/Posts_about_the_IndieWeb">Posts about the IndieWeb</a>  by a lot of people! </li>
@@ -78,7 +78,7 @@ permalink: /collection/
 </div>
 
 
-<div class="collection-title">Groups:</div>
+<div class="collection-title">Groups</div>
   <div class="collection-bodypart">
     <ul class="collection-list">
       <li class="randomize_groups"><a href="http://www.dubberly.com">Dubberly Design Office</a> </li>
