new weeknote and updated collection

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -29,24 +29,6 @@ permalink: /collection/
       <br> <br>
     </div>
 
-  <div class="collection-title">My tweets</div>
-    <div class="collection-bodypart">
-      <ul class="collection-list">
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179840991466930176">Content designed for vertical viewing</a> </li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179163493943001090">Motion design for Patriot Act with Hasan Minhaj</li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1103464497157529600">Alibaba's re-commerce app</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1144667443920379910">Animation techniques from Into the Spider-verse!!</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1098763943495970816">A comparison of revenue distribution between Tencent & Facebook</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1088534031220625409">Interface + Retail observations in Shanghai</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1082880387154468864">Mobility related observations in Shanghai</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1098763943495970816">A comparison between Tencent and Facebook's revenue source</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179163493943001090">Motion Design for Patriot Act with Hasan Minhaj</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1227697758074597376">A gallery of stunning (3d) tutorials/explainers</a></li>
-        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1260374200402931712">WeChat's voice message interface</a></li>
-      </ul>
-      <br> <br>
-    </div>
-
   <div class="collection-title">Books</div>
 
     <div class="collection-bodypart">
@@ -56,6 +38,7 @@ permalink: /collection/
         <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/Reinventing_Fire">Reinventing Fire</a> by Amory B. Lovins </li>
         <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/How_Buildings_Learn">How Buildings Learn</a> by Stewart Brand </li>
         <li class="randomize_books"><a href="https://en.wikipedia.org/wiki/The_Timeless_Way_of_Building">The Timeles Way of Building</a> by Christopher Alexander </li>
+        <li class="randomize_books"><a href="https://www.citylab.com/life/2019/04/the-municipalists-seth-fried-gentrification-book-interview/587032/">The Municipalists</a> by Seth Fried </li>
 
       </ul>
       <br> <br>
@@ -96,6 +79,27 @@ permalink: /collection/
       <li class="randomize_groups"><a href="http://specialprojects.studio">Special Projects</a> </li>
       <li class="randomize_groups"><a href="https://www.plethora-project.com">Plethora Project</a> </li>
       <li class="randomize_groups"><a href="https://otherlab.com">Otherlab</a> </li>
+      <li class="randomize_groups"><a href="https://www.popupmagazine.com">Pop-up Magazine</a> </li>
+      <li class="randomize_groups"><a href="https://www.afrotectopia.org">Afrotechtopia</a> </li>
+      <li class="randomize_groups"><a href="https://sfpc.io">School for Poetic Computation</a> </li>
     </ul>
     <br> <br>
   </div>
+
+  <div class="collection-title">My tweets</div>
+    <div class="collection-bodypart">
+      <ul class="collection-list">
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179840991466930176">Content designed for vertical viewing</a> </li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179163493943001090">Motion design for Patriot Act with Hasan Minhaj</li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1103464497157529600">Alibaba's re-commerce app</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1144667443920379910">Animation techniques from Into the Spider-verse!!</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1098763943495970816">A comparison of revenue distribution between Tencent & Facebook</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1088534031220625409">Interface + Retail observations in Shanghai</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1082880387154468864">Mobility related observations in Shanghai</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1098763943495970816">A comparison between Tencent and Facebook's revenue source</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1179163493943001090">Motion Design for Patriot Act with Hasan Minhaj</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1227697758074597376">A gallery of stunning (3d) tutorials/explainers</a></li>
+        <li class="randomize_tweets"><a href="https://twitter.com/glitchyowl/status/1260374200402931712">WeChat's voice message interface</a></li>
+      </ul>
+      <br> <br>
+    </div>
