--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,16 +24,21 @@
 
   <!-- RSS -->
   {% feed_meta %}
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-91457620-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-91457620-1');
-</script>
+  <!-- bubble cursor -->
+  <script src="{{ "/js/oldbubble.js" | relative_url }}"></script>
+  <!-- <script src="{{ "/js/bubbleCursor.js" | relative_url }}"></script> -->
+  <script src="{{ "/js/main.js" | relative_url }}"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91457620-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-91457620-1');
+  </script>
 
 
 </head>
