--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="cursor" lang="en">
 
   {% include head.html %}
 
-  <body>
+  <body class="cursor">
     <nav class="nav">
       <div class="nav-container">
         <a href="{{ site.baseurl }}/">
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="{{ '/weeknotes' | prepend: site.baseurl }}">Weeknotes</a></li>
           <li><a href="{{ '/collection' |prepend: site.baseurl }}/">Collection</a></li>
-          <!-- <li><a href="{{ '/china' | prepend: site.baseurl }}">China</a></li> -->
+          <li><a href="{{ '/comic' | prepend: site.baseurl }}">Photo Comic</a></li>
           <li><a href="http://tinyletter.com/speculatvglitch">Newsletter</a></li>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
 
@@ -20,17 +20,16 @@
       </div>
     </nav>
 
-    <main>
+    <main class="cursor">
       {{ content }}
     </main>
 
-    <footer>
+    <footer class="cursor">
       <span>
         &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Coded with Jekyll.
       </span>
     </footer>
 
-    <script src="/bubbleCursor.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
