updated credits and photo comic description placeholder

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -7,14 +7,12 @@ permalink: /comic/
 <div class="post">
   <div class="post-line"></div>
 
-  I' often re-remember the times when I wrote something everyday or every month. In order to reflect upon my work and life and inspired by Matt Webb's <a href="https://medium.com/job-garden/a-pre-history-of-weeknotes-plus-why-i-write-them-and-perhaps-why-you-should-too-week-16-31a4a5cbf7b0">article on Weeknotes</a>, I've decided scribble down thoughts and group them by weeks.'
+  Photo comic description coming soon..!
 
   <br><br>
 
 
   <br><br>
-
-  As these are published in very raw form, please be generous when reacting to them.
 
 </div>
 
