updated home, about, and comic

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,28 +5,30 @@ layout: default
 
 <div class="post-line"></div>
 
-In general, I strive to be fearless, but not delusional; be joyful, but not naive; be thoughtful, but not stubborn; be communicative, but not commanding; be credible, but not infamous;
+In general, I strive to be fearless, but not delusional; be joyful, but not naive; be thoughtful, but not stubborn; be communicative, but not commanding; be credible, but not infamous.
 
 <br><br>
 
 In the long-term, I want to help close the gap between ideals and reality, academic and industry.
 
 <br><br>
-Currently, I’m building small products at <a href="http://tinyfactories.space">Tiny Factories</a> because I believe there's a future where indiepreneurs thrive. In a few years, I hope to take the learnings from making, launching, marketing, selling products in a monthly-cycle and apply them to bigger projects.
+Currently, I'm gardening at <a href="https://makespace.fun">MakeSpace</a> because computing environments can be and should be more fluid, playful, equitable, fun, humane, expressive ++. I’m also building small products at <a href="http://tinyfactories.space">Tiny Factories</a> because I believe there's a future where indiepreneurs thrive. For most of my days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on my face, but, you may notice it through my behavior.
+
+<!-- In a few years, I hope to take the learnings from making, launching, marketing, selling products in a monthly-cycle and apply them to bigger projects. -->
 
 <!-- I think a lot about relationships, interactions, and stories. I'm gradually thinking more about tactility, spaces, conversations, and urban systems.
 
 I write weeknotes to reflect upon my day-to-day actions. I write blog posts to summarize a feeling I have. If you'd like to converse about something, or view my design portfolio, you can email me at <a href="mailto:wei@weiweihsu.com?Subject=Hello" target="_top">wei@weiweihsu.com</a>
 
-Currently, I'm adjusting to my post-college life. I'm trying to understand <i>how</i> I can devote my time to what I want to do. For most of the days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on my face. -->
+Currently, I'm adjusting to my post-college life. I'm trying to understand <i>how</i> I can devote my time to what I want to do.  -->
 
 <br><br>
 
-My senior thesis was on the "Space" of Computing: Computer went from being a job title for people who do calculations, to large machines that would fill up an entire room, to devices so small that they would fit into different objects and dissolve into our environment. Clearly, our conception of "computing" has changed and <i>continues</i> to change. This work identified dimensions that constitute the "space of computing". While some dimensions are less recognizable than others, defining them is an essential undertaking because defining the scope of "computing space" is to understand past, present, and future of our technological advancements, what we've already done and what we've neglected. You can view the thesis presentation <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a>.
+My senior thesis was on the "Space" of Computing: Computer went from being a job title for people who do calculations, to large machines that would fill up an entire room, to devices so small that they would fit into different objects and dissolve into our environment. Clearly, our conception of "computing" has changed and <i>continues</i> to change. This work identified dimensions that constitute the "space of computing". While some dimensions are less recognizable than others, defining them is an essential undertaking because defining the scope of "computing space" is to understand past, present, and future of our technological advancements, what we've already done and what we've neglected. You can view the thesis presentation <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a> and the paper I co-authored <a href="https://jods.mitpress.mit.edu/pub/6pewbpry/release/1">here</a>.
 
 <br><br>
 
-Thank you for spending some time here. Stay a while if you aren't in a rush.
+Thank you for spending some time here. Stay a while and write me a letter if you aren't in a rush! But of course, no pressure ;)
 
 </div>
 
