hopefully better mobile view for photo comic

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -7,7 +7,7 @@ permalink: /comic/
 <div class="post">
   <div class="post-line"></div>
 
-  One of my dreams is to be able to express through illustrated comics, but I think it’s going to take a while for me to be fluent enough with illustrating to tell stories in that beautiful medium.
+  One of my dreams is to be able to express through illustrated comics, but I think it’s going to take a while for me to be fluent enough with tell stories in that beautiful medium.
 
   <br><br>
   For now, I’d like to try and make collages with photos, words, and lines and shapes! As I understand myself more, I realize that I think better in a blend of media types, and I’m looking forward to making more and iterating on photo comic as a medium.
