updated wheres home for mobile legibility

--- a/_layouts/comicpost.html
+++ b/_layouts/comicpost.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <div class="post-info">
-    a photo comic 
+    a comic log
   </div>
 
   <h5 class="post-title">{{ page.title }}</h5>
