--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-Title: Photo comic
+Title: Comic log
 permalink: /comic/
 ---
 
@@ -10,7 +10,7 @@ permalink: /comic/
   One of my dreams is to be able to express through illustrated comics, but I think it’s going to take a while for me to be fluent enough with tell stories in that beautiful medium.
 
   <br><br>
-  For now, I’d like to try and make collages with photos, words, and lines and shapes! As I understand myself more, I realize that I think better in a blend of media types, and I’m looking forward to making more and iterating on photo comic as a medium.
+  For now, I’d like to try and make collages with photos, words, and lines and shapes! As I understand myself more, I realize that I think better in a blend of media types, and I’m looking forward to making more and iterating on comic log as a way to share stories.
 
   <br><br>Hopefully, there will be a day when they become more dynamic, partially animated, bi-directionally linked, and more. If you have suggestions and/or want to riff on this, let me know!
 
