--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -174,7 +174,7 @@ mark {
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
   img {
     max-width: 110vw;
     margin: 0 -20% !important;
