removed newslttr, updated bio, removed mobile img resize

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
           <li><a href="{{ '/weeknotes' | prepend: site.baseurl }}">Weeknotes</a></li>
           <li><a href="{{ '/rolodex' |prepend: site.baseurl }}/">Rolodex</a></li>
           <li><a href="{{ '/comic' | prepend: site.baseurl }}">Comic log</a></li>
-          <li><a href="http://tinyletter.com/speculatvglitch">Newsletter</a></li>
+          <!-- <li><a href="http://tinyletter.com/speculatvglitch">Newsletter</a></li> -->
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
 
         </ul>
