--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ In general, I strive to be fearless, but not delusional; be joyful, but not naiv
 In the long-term, I want to help close the gap between ideals and reality, academic and industry.
 
 <br><br>
-Currently, I'm gardening at <a href="https://makespace.fun">MakeSpace</a> because computing environments can be and should be more fluid, playful, equitable, fun, humane, expressive ++. I’m also building small products at <a href="http://tinyfactories.space">Tiny Factories</a> because I believe there's a future where indiepreneurs thrive. For most of my days, I feel both exponentially lost and immensely motivated. However, if you know me in real life, you probably won't spot either on my face, but, you may notice it through my behavior.
+Currently, I'm gardening at <a href="https://makespace.fun">MakeSpace</a> because computing environments can be and should be more fluid, playful, equitable, fun, humane, expressive ++. I’m also building small products at <a href="http://tinyfactories.space">Tiny Factories</a> because I believe there's a future where indiepreneurs thrive. 
 
 <!-- In a few years, I hope to take the learnings from making, launching, marketing, selling products in a monthly-cycle and apply them to bigger projects. -->
 
