added august roundup

--- a/_layouts/rolodex.html
+++ b/_layouts/rolodex.html
@@ -7,7 +7,7 @@ permalink: /rolodex/
 <div class="post">
   <div class="post-line"></div>
 
-  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary. Also, this rolodex probably describes more about my own interest than anything else.
+  Below is an incomplete collection of blog posts and things/groups I appreciate and respect. The order of this list is randomized because it is arbituary. Also, this rolodex probably describes more about my own (to-be-expanded) set of interests than anything else.
 
 <br> <br> <br>
 
